--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,6 +154,50 @@ a {
   max-width: 760px;
 }
 
+/**** Element:start ****/
+.app-element .app-element-head {
+  margin: 0;
+  padding: 10px;
+  background-color: #eef5f9;
+  border-bottom: 1px solid #dadede;
+  border-radius: 3px 3px 0 0;
+  color: #446479;
+  font-size: 18px;
+}
+
+.app-element .app-element-body {
+  max-height: 225px;
+  overflow-x: auto;
+}
+
+.app-element .info-tooltip {
+  display: inline-block;
+  padding: 3px 5px 1px;
+  background-color: #446479;
+  color: #EEF5F9;
+  text-align: center;
+  border-radius: 3px;
+  font-size: 13px;
+  font-weight: bold;
+  margin-left: 3px;
+}
+
+.app-element .btn-right {
+  display: inline-block;
+  position: relative;
+  top: -2px;
+}
+
+.app-element .load-spin {
+  padding: 20px 0;
+  text-align: center;
+}
+
+.app-element .load-spin img {
+  height: 25px;
+}
+/**** Element:end ****/
+
 .app-home-head {
   position: relative;
   padding: 10px;
@@ -313,11 +357,17 @@ a {
 .modal__actions button:last-child {
   margin-right: 0;
 }
-
 /**** Modal:end ****/
 
-/**** Form:start ****/
+/**** Dropdown:start ****/
+.dropdown {
+  display: none;
+}
+/**** Dropdown:end ****/
 
+
+
+/**** Form:start ****/
 .mui-textfield {
   display: block;
   padding-top: 15px;
