--- a/public/app/home/templates/dropdown-filter-game.html
+++ b/public/app/home/templates/dropdown-filter-game.html
@@ -1,46 +1,49 @@
-<button ng-click="dropdownFilterGameToggle()" 
-        ng-class="{'btn-danger': hasFiltersGame(), 'btn-default': !hasFiltersGame()}"
-        type="button" class="btn btn-xs">
-    <span class="icon icon-filter"></span>
+<button ng-click="dropdownFilterGameToggle()"
+        ng-class="{'mdl-button--colored': hasFiltersGame()}"
+        class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
+    <i class="material-icons">settings</i>
 </button>
-<div class="dropdown-menu dropdown-filter">
-    <div class="form-group">
-        <label for="search-game-color" class="control-label">{{ 'color'|translate }}</label>
-        <select ng-model="searchGame.color" id="search-game-color" class="form-control">
-            <option value="">{{ 'all'|translate }}</option>
-            <option ng-repeat="color in paramsSearchGame.colors" value="{{ color }}">{{ color|translate }}</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="search-game-time" class="control-label">{{ 'time'|translate }}</label>
-        <select ng-model="searchGame.time" id="search-game-time" class="form-control">
-            <option value="">{{ 'all'|translate }}</option>
-            <option ng-repeat="time in paramsSearchGame.times" value="{{ time }}">{{ time / 60 }} {{ 'minutes'|translate }}</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="search-game-points-min" class="control-label">{{ 'points'|translate }}</label>
-        <div class="row">
-            <div class="col-sm-6">
-                <select ng-model="searchGame.pointsMin" id="search-game-points-min" class="form-control">
-                    <option value="0">{{ 'min'|translate }}</option>
-                    <option ng-repeat="pointsMin in paramsSearchGame.pointsMin" value="{{ pointsMin }}">{{ pointsMin }}</option>
-                </select>
-            </div>
-            <div class="col-sm-6">
-                <select ng-model="searchGame.pointsMax" id="search-game-points-max" class="form-control">
-                    <option value="0">{{ 'max'|translate }}</option>
-                    <option ng-repeat="pointsMax in paramsSearchGame.pointsMax" value="{{ pointsMax }}">{{ pointsMax }}</option>
-                </select>
-            </div>
+<div class="dropdown">
+    <form role="form">
+        <div class="mui-select">
+            <select ng-model="searchGame.color" 
+                    ng-options="value as value|translate for (key, value) in paramsSearchGame.colors" 
+                    id="search-game-color">
+            </select>
+            <label for="search-game-color">{{ 'color'|translate }}</label>
         </div>
-    </div>
-    <div class="pull-right">
-        <button ng-click="resetSearchGame(); dropdownFilterGameToggle()" class="btn btn-xs btn-danger">
-            <span class="icon icon-white icon-reset"></span>
-        </button>
-        <button ng-click="dropdownFilterGameToggle()" class="btn btn-xs btn-success">
-            <span class="icon icon-white icon-valid"></span>
-        </button>
-    </div>
+        <div class="mui-select">
+            <select ng-model="searchGame.time"
+                    ng-options="value as (value / 60) + ' ' + 'minutes'|translate for (key, value) in paramsSearchGame.times" 
+                    id="search-game-time">
+            </select>
+            <label for="search-game-time">{{ 'time'|translate }}</label>
+        </div>
+        <div class="mui-select">
+            <div class="mdl-grid">
+                <select ng-model="searchGame.pointsMin"
+                        ng-options="value as value for (key, value) in paramsSearchGame.pointsMin" 
+                        id="search-game-points" 
+                        class="mdl-cell--6-col">
+                    <option value="">{{ 'min'|translate }}</option>
+                </select>
+                <select ng-model="searchGame.pointsMax"
+                        ng-options="value as value for (key, value) in paramsSearchGame.pointsMax"
+                        class="mdl-cell--6-col">
+                    <option value="">{{ 'max'|translate }}</option>
+                </select>
+            </div>
+            <label for="search-game-points">{{ 'points'|translate }}</label>
+        </div>
+        <div class="modal__actions">
+            <button ng-click="resetSearchGame(); dropdownFilterGameToggle()"
+                    class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
+                <i class="material-icons">close</i>
+            </button>
+            <button ng-click="dropdownFilterGameToggle()"
+                    class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
+                <i class="material-icons">check</i>
+            </button>
+        </div>
+    </form>
 </div>
