--- a/public/app/components/templates/sortable.html
+++ b/public/app/components/templates/sortable.html
@@ -1,4 +1,4 @@
-<a href ng-click="reverse = !reverse">
+<a href ng-click="sort()">
     <span class="icon-{{ icon }}"></span>
     <span ng-class="{'icon-sort-down': reverse, 'icon-sort-up': !reverse}" class="icon-table-sortable"></span>
 </a>
