fix css + ranking

--- a/public/app/home/templates/modal-challenge.html
+++ b/public/app/home/templates/modal-challenge.html
@@ -6,7 +6,7 @@
                 <span class="sr-only">{{ 'cancel'|translate }}</span>
             </button>
             <div class="profile">
-                <div class="pull-left img">
+                <div class="app__pull-left">
                     <img class="profile-picture" src="https://graph.facebook.com/{{ challenger.uid }}/picture">
                 </div>
                 <div>
