--- a/public/app/components/templates/col-right.html
+++ b/public/app/components/templates/col-right.html
@@ -14,7 +14,7 @@
        class="element btn btn-default">
         <span class="icon-right icon-points"></span>
     </a>
-    <button apprequests class="element btn btn-default">
+    <button friends-requests class="element btn btn-default">
         <span class="icon-right icon-invite-friends"></span>
     </button>
     <button button-sound class="element btn btn-default"></button>
