--- a/public/app/components/templates/col-right.html
+++ b/public/app/components/templates/col-right.html
@@ -1,16 +1,16 @@
 <div class="col-right">
     <a ng-show="!isCurrentRoute('/')"
-       href="#/"
+       href="/"
        class="element btn btn-default">
         <span class="icon-right icon-home"></span>
     </a>
     <a ng-show="!isCurrentRoute('/ranking')"
-       href="#/ranking"
+       href="/ranking"
        class="element btn btn-default">
         <span class="icon-right icon-ranking"></span>
     </a>
     <a ng-show="!isCurrentRoute('/trophies')"
-       href="#/trophies"
+       href="/trophies"
        class="element btn btn-default">
         <span class="icon-right icon-points"></span>
     </a>
