--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -69,7 +69,7 @@
                         ng-class="isLastTurn(position)" 
                         id="{{position}}" 
                         class="game-box">
-                        <span class="piece" ng-class="getPieceClass(position)" draggable data-position="{{position}}"></span>
+                        <span class="piece" ng-class="getPieceClass(position)" piece-draggable data-position="{{position}}"></span>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,5 @@
 </div>
 
 <div modal-promotion class="modal fade" id="modal-promotion"></div>
-<div modal-response-draw class="modal fade" id="modal-response-draw"></div>
-<div modal-finish-game class="modal fade" id="modal-finish-game"></div>
 
 -->
