--- a/public/app/trophies/templates/trophies.html
+++ b/public/app/trophies/templates/trophies.html
@@ -13,7 +13,7 @@
     <div class="app-modal__dialog">
         <div class="app-modal__content app__text-center">
             <h3 class="app-trophy__title">{{ 'trophies.content.' + trophy.id + '.title' | translate }}</h3>
-            <span class="app-trophy__badge app-trophy__badge-{{ trophy.css }}"></span>
+            <span class="app-trophy__badge app-trophy__badge--modal app-trophy__badge-{{ trophy.css }}"></span>
             <p>{{ 'trophies.content.' + trophy.id + '.description' | translate }}</p>
         </div>
     </div>
