fix table ranking

--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -1,6 +1,6 @@
-<div element class="app-element mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
+<div element class="app-element app-ranking mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <div element-content class="app-element__body">
-        <table class="app-element__table mdl-data-table mdl-js-data-table">
+        <table class="app-element__table app-element__table--ranking mdl-data-table mdl-js-data-table">
             <tbody>
                 <tr ng-repeat="rank in ranking" show-profile user="rank">
                     <td class="app-element__table-rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
