--- a/public/css/style.css
+++ b/public/css/style.css
@@ -280,6 +280,10 @@ a {
   color: #f5716e;
 }
 
+.app-element__table--ranking tbody tr {
+  cursor: pointer;
+}
+
 .app-ranking__pagination {
   width: 100%;
   text-align: center;
